# libmot

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  aclocal.m4  autogen.sh  configure.ac  libmot.pc.in  mot.cpp  mot.h  test_mot.cpp
config/: acinclude.m4
doc/: Makefile.am
include/: Makefile.am  mot.h
include/mot/: charsets.h  contenttypes.h
src/: Makefile  Makefile.am  charsets.h  common.cpp  common.h  libmot.pc  libmot.pc.in  mot.cpp  mot.h  util.h
test/: Makefile  Makefile.am  test_mot.cpp  test_transportid.cpp  time_test.cpp  write_directory_segments.cpp  write_header_segment.cpp
tests/: Makefile  test_directory_parameters.cpp  test_example.cpp  test_header_parameters.cpp  test_mot.cpp  test_mot_directorymode.cpp  test_mot_headermode.cpp  test_time.cpp  test_transportid.cpp  write_header_segment.cpp
