bin_PROGRAMS = test_mot test_transportid write_header_segment write_directory_segments

test_mot_SOURCES = test_mot.cpp
test_mot_LDADD = -L../src -lmot

test_transportid_SOURCES = test_transportid.cpp
test_transportid_LDADD = -L../src -lmot

write_header_segment_SOURCES = write_header_segment.cpp
write_header_segment_LDADD = -L../src -lmot

write_directory_segments_SOURCES = write_directory_segments.cpp
write_directory_segments_LDADD = -L../src -lmot
