bin_PROGRAMS = test_mot test_transportid test_header_parameters test_time write_header_segment write_directory_segments

test_mot_SOURCES = test_mot.cpp
test_mot_LDADD = -L../src -lmot
test_mot_CPPFLAGS = -I../src

test_transportid_SOURCES = test_transportid.cpp
test_transportid_LDADD = -L../src -lmot
test_transportid_CPPFLAGS = -I../src

test_header_parameters_SOURCES = test_header_parameters.cpp
test_header_parameters_LDADD = -L../src -lmot
test_header_parameters_CPPFLAGS = -I../src

test_time_SOURCES = test_time.cpp
test_time_LDADD = -L../src -lmot
test_time_CPPFLAGS = -I../src

write_header_segment_SOURCES = write_header_segment.cpp
write_header_segment_LDADD = -L../src -lmot
write_header_CPPFLAGS = -I../src

write_directory_segments_SOURCES = write_directory_segments.cpp
write_directory_segments_LDADD = -L../src -lmot
write_directory_CPPFLAGS = -I../src
